<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_activity1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/EditText_Valor1"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ConstanteValor"
        app:layout_constraintBottom_toTopOf="@+id/Edit_TextValor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_TextValor2"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ConstanteValor2"
        app:layout_constraintBottom_toTopOf="@+id/textview_multiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Valor1" />

    <TextView
        android:id="@+id/textview_multiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="64dp"
        android:text="@string/constateMultiplicar"
        app:layout_constraintBottom_toTopOf="@+id/button_multiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_multiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="304dp"
        android:text="@string/constateOperar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>